# airbnb-clone-backend

./: pyproject.toml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_rename_experience_tie_booking_experience_time.py  0003_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py
experiences/: models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_perk_category_alter_perk_details_and_more.py  0003_remove_perk_category_experience_category.py  0004_alter_experience_price.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_user.py  0003_alter_review_room.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_amenity_description.py  0003_room_name.py  0004_alter_amenity_options.py  0005_rename_created_amenity_created_at_and_more.py  (+2 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: serializers.py  urls.py  views.py
(+9 files in other folders)
